# investpulse.net

./: .gitignore  ADR.md  AZURE-AUTH-README.md  DevelopmentPlan.md  README.md  a.puml  dapr.yaml  dev-terminal-init.sh  package-lock.json
.components/: inmempubsub.yaml
backend/: .env.sentiment.example  .gitignore  ARCHITECTURE.md  CODING_AGENT_SPECIFICATION.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  PROCESSING_ARCHITECTURE.md  RAY_CONVERSION.md  README.md  SENTIMENT_INSTALLATION.md  SENTIMENT_QUICKSTART.md  analyze_parquet_pyspark.ipynb  mypy.ini  pyproject.toml  requirements.txt  test_msft.json  typecheck.sh
backend/docs/: README.md  SENTIMENT_DOCUMENTATION.md  SENTIMENT_EXAMPLES.md  SENTIMENT_RAY_MIGRATION.md  SENTIMENT_RAY_SUMMARY_PL.md  sequence-processing-workflow.puml  state-processing-lifecycle.puml
backend/src/: app.py  fact_extractor.py  file_watcher.py  logger.py  path_demo.py  path_event_handler.py  path_file_watcher.py  path_integration_example.py  path_watcher_example.py  processing_example.py  processing_functions.py  processing_state.py  ray_config.py  ray_example.py  ray_processing_worker.py  ray_state_manager.py  ray_workflow_orchestrator.py  sec_edgar_downloader.py  sentiment_example.py  sentiment_ray_example.py  state_manager.py
backend/tests/: __init__.py  conftest.py  test_app.py  test_architecture_integration.py  test_edge_cases.py  test_fact_extractor.py  test_file_watcher.py  test_integration.py  test_integration_old.py  test_path_event_handler.py  test_processing_functions.py  test_processing_state.py  test_ray_actors.py  test_sec_edgar_downloader.py  test_sentiment.py  test_state_manager.py
(+495 files in other folders)
